--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~12.0.0",
     "bootstrap": "^4.6.0",
     "rxjs": "~6.6.0",
+    "serverless-finch": "^4.0.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
